cdebconf (0.58) UNRELEASED; urgency=low

  * Translations
    - Giuseppe Sacco
      - Italian translation update by Davide Viti (it.po)

 -- Giuseppe Sacco <eppesuig@debian.org>  Fri,  5 Mar 2004 00:31:28 +0100

cdebconf (0.57) unstable; urgency=low

  * Denis Barbier
    - In cdebconf-udeb.templates, set debconf/showold to false by
      default.  This is possible now that main-menu temporarily
      changes this value to true when reconfiguring a package.
      Closes: #229648
    - Remove unused /var/lib/cdebconf/templates and
      /var/lib/cdebconf/questions directories from cdebconf-udeb.dirs.
      Closes: #222574
    - When templates or questions database are missing, debconf exits
      with a return code set to 1.
      Closes: #213165
    - Fix text and button placement in the newt frontend to prevent
      text overlap.  Closes: #225968
      When backup is disabled, the <Continue> button is now centered.
      The <Yes>/<No> buttons in boolean questions are separated from
      the <Go Back> button.
    - With progress bars, minimal text height is set to 2, so that
      there is no box redrawing when 1 or 2 line long text is displayed.
    - If title is larger than other widgets, it was not displayed.
      Main window is now enlarged in such a case so that title becomes
      visible.
    - When a title is too large to fit on a window, it is truncated
      with ellipsis.  Closes: #235184
  * Joey Hess
    - In the choices splitter, support "\ " as a way to have leading
      whitespace that is not stripped out. Did it this way because
      changing it to split on ", " instead of "*, *" might break stuff,
      and the spec is very vague.

 -- Joey Hess <joeyh@debian.org>  Thu,  4 Mar 2004 11:10:40 -0500

cdebconf (0.56) unstable; urgency=low

  * Translations
    - Ming Hua
      - Initial Traditional Chinese translation (zh_TW.po), by Tetralet
      - Reorganize the format of translation changelogs
    - Håvard Korsvoll