@@ -1,5 +1,10 @@
 cdebconf (0.58) UNRELEASED; urgency=low
 
+  * Denis Barbier
+    - With the text frontend, '\r' is not supported by all terminals,
+      which made progress bars unreadable.  The display is now:
+        Progress bar title ..20% ..40% ..60% ..80% ..100%
+      Closes: #195704
   * Translations
     - Giuseppe Sacco
       - Italian translation update by Davide Viti (it.po)
